# FSRT

./: .dockerignore  .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  atlassian_rest_api_endpoints.txt  compass-scopes.yaml  example.txt  secretdata.yaml
.atlassian/: OWNER
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
crates/forge/: Cargo.toml
crates/forge-analyzer/: Cargo.toml
crates/forge-analyzer/jira-damn-vulnerable-forge-app/: manifest.yml  package-lock.json  package.json
crates/forge-analyzer/jira-damn-vulnerable-forge-app/src/: authz.jsx  utils.js
crates/forge-analyzer/src/: analyzer.rs  lib.rs  main.rs
crates/forge/src/: main.rs
crates/forge_analyzer/: Cargo.toml
crates/forge_analyzer/src/: analyzer.rs  checkers.rs  ctx.rs  definitions.rs  engine.rs  exports.rs  interp.rs  ir.rs  lattice.rs  lib.rs  main.rs  permission_classifier.rs  permissionclassifier.rs  pretty.rs  reporter.rs  resolver.rs  utils.rs  worklist.rs
crates/forge_file_resolver/: Cargo.toml
crates/forge_file_resolver/src/: lib.rs
crates/forge_loader/: Cargo.toml
crates/forge_loader/src/: error.rs  forgepermissions.rs  lib.rs  manifest.rs
crates/forge_permission_resolver/: Cargo.toml
crates/forge_permission_resolver/src/: lib.rs  permissions_cache.rs  permissions_resolver.rs  permissions_resolver_compass.rs  serde.rs  test.rs
crates/forge_utils/: Cargo.toml
crates/forge_utils/src/: lib.rs
crates/fsrt/: Cargo.toml
crates/fsrt/src/: forge_project.rs  main.rs  test.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  main.rs  manifest.rs
jira-damn-vulnerable-forge-app/src/: GlobalPageApp.jsx  IssuePanelApp.jsx
test-apps/basic/: .eslintrc  README.md  manifest.yml  package-lock.json  package.json  tsconfig.json
test-apps/basic/src/: index.tsx
test-apps/issue-1-resolver/: manifest.yml
test-apps/issue-1-resolver-with-vuln/src/: index.js
test-apps/issue-1-resolver/src/: index.js
test-apps/jira-damn-vulnerable-forge-app/: README.md  manifest.yml  package-lock.json  package.json
test-apps/jira-damn-vulnerable-forge-app/src/: GlobalPageApp.jsx  IssuePanelApp.jsx  index.jsx  utils.js
test-apps/jira-pp/: manifest.yml
test-apps/jira-pp/src/frontend/: index.jsx
test-apps/jira-pp/src/resolvers/: index.js
