[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Joshua Wong"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
itertools = "0.12.1"
num-bigint = { version = "0.4.4" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
petgraph = "0.6.4"
pretty_assertions = "1.4.0"
indexmap = { version = "2.2.6", features = ["std"] }
once_cell = "1.19.0"
regex = "1.10.4"
rustc-hash = "1.1.0"
smallvec = { version = "1.13.2", features = ["union", "const_new"] }
swc_core = { version = "0.90.26", features = [
    "common",
    "common_sourcemap",
    "ecma_visit_path",
    "ecma_utils",
    "ecma_ast",
    "swc",
    "ecma_visit",
    "ecma_transforms",
    "ecma_transforms_module",
    "ecma_transforms_typescript",
    "ecma_parser_typescript",
] }
thiserror = "1.0.58"
time = { version = "0.3.34", features = [
    "local-offset",
    "serde-human-readable",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
typed-index-collections = "3.1.0"
walkdir = "2.5.0"
forge_loader = { path = "crates/forge_loader" }
forge_analyzer = { path = "crates/forge_analyzer" }
forge_file_resolver = { path = "crates/forge_file_resolver" }
forge_utils = { path = "crates/forge_utils" }
forge_permission_resolver = { path = "crates/forge_permission_resolver" }

[workspace.lints.rust]
rust_2018_idioms = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
too_many_arguments = "allow"

# enable full optimization for dependencies
[profile.dev.package."*"]
opt-level = 3
