[package]
name = "forge-analyzer"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
once_cell.workspace = true
regex.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
swc_core.workspace = true
swc_ecma_parser.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
