[package]
name = "forge_analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
fixedbitset.workspace = true
forge_utils.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
once_cell.workspace = true
regex.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
swc_core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typed-arena.workspace = true
typed-index-collections.workspace = true
walkdir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
