[package]
name = "forge_loader"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forge_utils.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
