[package]
name = "fsrt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
forge_analyzer.workspace = true
forge_file_resolver.workspace = true
forge_loader.workspace = true
forge_permission_resolver.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
swc_core.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true
walkdir.workspace = true
graphql-parser = "0.4.0"
create = "0.1.0"
glob = "0.3.1"
dirs = "5.0.1"
